SERVER-10816 enable StackChecker when not optimized and in debug mode rather than when simply in debug mode